@@ -15,15 +15,20 @@
  */
 package org.jetbrains.intellij.build
 
+import com.intellij.platform.ijent.community.buildConstants.IJENT_BOOT_CLASSPATH_MODULE
 import kotlinx.collections.immutable.toPersistentList
 import org.jetbrains.intellij.build.CommunityRepositoryModules.COMMUNITY_REPOSITORY_PLUGINS
 import org.jetbrains.intellij.build.impl.PatchOverwriteMode
+import org.jetbrains.intellij.build.impl.PlatformJarNames.PLATFORM_CORE_NIO_FS
 import org.jetbrains.intellij.build.impl.PlatformJarNames.TEST_FRAMEWORK_JAR
 import org.jetbrains.intellij.build.impl.PluginLayout
 import org.jetbrains.intellij.build.impl.PluginLayout.Companion.pluginAuto
 import org.jetbrains.intellij.build.impl.getPluginLayoutsByJpsModuleNames
 import org.jetbrains.intellij.build.kotlin.KotlinBinaries
-import java.nio.file.Files
+import org.jetbrains.intellij.build.productLayout.CommunityModuleSets
+import org.jetbrains.intellij.build.productLayout.CommunityProductFragments
+import org.jetbrains.intellij.build.productLayout.ProductModulesContentSpec
+import org.jetbrains.intellij.build.productLayout.productModules
 import java.nio.file.Path
 import java.util.function.BiPredicate
 import kotlin.io.path.copyTo
@@ -33,15 +38,16 @@ import kotlin.io.path.createParentDirectories
  * Configures the Android Studio distribution by specifying bundled plugins, JVM args, extra files, and more.
  * See also: BaseIdeaProperties, IdeaCommunityProperties, CLionProperties.
  */
-class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
+class AndroidStudioProperties : ProductProperties() {
 
   companion object {
     private val INHERITED_PLUGINS = IDEA_BUNDLED_PLUGINS
 
     private val EXTRA_PLUGINS = listOf(
+      // Bundle Mercurial support for use in ASwB.
+      "intellij.vcs.hg",
       // Bundle the ML completion ranking plugins, just like IntelliJ IDEA does (b/456525685).
       "intellij.completionMlRanking",
-      "intellij.turboComplete",
       // Android Studio: package CIDR plugins.
       "intellij.cidr.clangd",
       "intellij.c",
@@ -63,6 +69,7 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
   override val baseFileName: String = "studio"
 
   init {
+    configurePropertiesForAllEditionsOfIntelliJIdea(this)
     platformPrefix = "AndroidStudio"
     mainClassName = "com.android.tools.idea.MainWrapper"
     applicationInfoModule = "intellij.android.adt.branding"
@@ -78,11 +85,8 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
       "-XX:FlightRecorderOptions=stackdepth=256",
       // Required by instantapps-api.jar (ag/I55803b347).
       "--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED",
-      // Enable use of the deprecated SecurityManager (b/302171264).
-      "-Djava.security.manager=allow",
-      // Configure the feedback URL displayed for IDE startup failures. This system property should match
-      // StartupErrorReporter.STARTUP_ERROR_REPORTING_URL_PROPERTY. Eventually we may want a better landing page (b/295896403).
-      "-Dij.startup.error.report.url=https://issuetracker.google.com/issues/new?component=192708",
+
+      "-Dij.startup.error.handler.class=com.intellij.platform.ide.bootstrap.StudioStartupErrorHandler",
       // Workaround for C2 crashes b/377324522
       "-XX:CompileCommand=exclude,org.jetbrains.kotlin.serialization.deserialization.TypeDeserializer::simpleType",
       "-XX:CompileCommand=exclude,org.jetbrains.kotlin.serialization.deserialization.TypeDeserializer::toAttributes",
@@ -94,21 +98,31 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
       "intellij.idea.community.customization",
     )
     productLayout.addPlatformSpec { layout, _ ->
-      // From IdeaCommunityProperties:
-      layout.withModule("intellij.platform.duplicates.analysis")
-      layout.withModule("intellij.platform.structuralSearch")
+      // From JetBrainsProductProperties.
+      layout.withModule(IJENT_BOOT_CLASSPATH_MODULE, PLATFORM_CORE_NIO_FS)
 
       layout.withModule("intellij.android.adt.branding", "resources.jar")
-      layout.withModule("intellij.cidr.common.testFramework.core", TEST_FRAMEWORK_JAR)
-      layout.withModule("intellij.cidr.common.testFramework.core.nolang", TEST_FRAMEWORK_JAR)
 
-      // used for compose and jewel related testing in the Android plugin
+      // IntelliJ no longer ships testFramework.jar (since 2026.1) but we still need it in Studio
+      // for running tests on the Android plugin side. Ideally we should move this out of the distro
+      // and find some other way to use it in tests only (b/523391585).
+      layout.withModule("intellij.platform.testFramework", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.platform.testFramework.common", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.java.testFramework", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.java.testFramework.shared", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.platform.testFramework.core", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.platform.testFramework.teamCity", TEST_FRAMEWORK_JAR)
+      // The following are needed for Jewel/Compose tests.
       layout.withModule("intellij.platform.jewel.intUi.standalone", TEST_FRAMEWORK_JAR)
       layout.withModule("intellij.platform.jewel.markdown.intUiStandaloneStyling", TEST_FRAMEWORK_JAR)
       layout.withModuleLibrary("org.jetbrains.compose.ui.ui.test.junit4.desktop", "intellij.libraries.compose.foundation.desktop.junit", TEST_FRAMEWORK_JAR)
-
-      layout.withProjectLibrary("assertJ", TEST_FRAMEWORK_JAR) // Used by the CIDR test framework (b/295336541).
-      layout.withProjectLibrary("hamcrest", TEST_FRAMEWORK_JAR) // Used by the CIDR test framework (b/295336541).
+      // The following are needed for CIDR tests.
+      layout.withModule("intellij.cidr.common.testFramework.core", TEST_FRAMEWORK_JAR)
+      layout.withModule("intellij.cidr.common.testFramework.core.nolang", TEST_FRAMEWORK_JAR)
+      // The following are needed by the CIDR test framework (b/295336541).
+      layout.withProjectLibrary("assertJ", TEST_FRAMEWORK_JAR)
+      layout.withProjectLibrary("hamcrest", TEST_FRAMEWORK_JAR)
+      layout.withoutProjectLibrary("mockito") // Referenced by CIDR, but we do not want it bundled.
 
       // Move kotlinx-coroutines-guava to core, making it accessible to the Android plugin.
       // Note: we could bundle kotlinx-coroutines-guava in the Android plugin separately, but that's risky because (1) the library
@@ -116,10 +130,6 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
       // platform modules, leading to duplicated classes on the runtime classpath in some situations (depending on classloader configuration).
       // For precedent, see IntelliJ commit https://github.com/JetBrains/intellij-community/commit/bb6d3cf0ac.
       layout.withProjectLibrary("kotlinx-coroutines-guava")
-
-      // b/358035533: plexus-utils is used by maven-resolver-provider from core, thus plexus-utils must be in core too.
-      // This is consistent with the layout of IntelliJ IDEA CE 2024.2.
-      layout.withProjectLibrary("plexus-utils")
 
       // b/376902207: JetBrains apparently converted rml.dfa into a product module in CIDR commit 0f8319e82a.
       // Note that there is an associated V2 module rml.dfa.impl referenced from AndroidStudioPlugin.xml.
@@ -131,8 +141,8 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
         // and PluginManagerCore.getBuildNumber() for plugin compatibility purposes.
         val apiVersion = context.buildNumber.split('.').take(3).joinToString(".")
         val appInfoPath = "idea/AndroidStudioApplicationInfo.xml"
-        val moduleOutDir = context.getModuleOutputDir(context.findApplicationInfoModule())
-        val original = Files.readString(moduleOutDir.resolve(appInfoPath))
+        val appInfoModule = context.findApplicationInfoModule()
+        val original = checkNotNull(context.outputProvider.readFileContentFromModuleOutput(appInfoModule, appInfoPath)).toString(Charsets.UTF_8)
         val patched = original.replace(Regex("<build (.*?)/>"), "<build $1 apiVersion=\"$apiVersion\"/>")
         patcher.patchModuleOutput(applicationInfoModule, appInfoPath, patched, PatchOverwriteMode.TRUE)
       }
@@ -159,12 +169,15 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
       JavaPluginLayout.javaPlugin(),
       CommunityRepositoryModules.groovyPlugin(),
       // CIDR plugins migrated to v2 layouts, thus the included modules are computed
-      // mostly automatically based on the <content> tag in plugin.xml.
+      // mostly automatically based on the <content> tag in plugin.xml. Additional
+      // customization is mostly inspired by CidrPluginLayouts.kt.
       pluginAuto("intellij.cidr.clangd") { spec ->
         copyCidrLicense(spec)
       },
       pluginAuto("intellij.c") { spec ->
         copyCidrLicense(spec)
+        spec.excludeProjectLibrary("Kryo")
+        spec.excludeProjectLibrary("Objenesis")
       },
       pluginAuto("intellij.cidr.debugger") { spec ->
         copyCidrLicense(spec)
@@ -194,6 +207,23 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
     }
   }
 
+  override fun getProductContentDescriptor(): ProductModulesContentSpec = productModules {
+    // This is loosely based on IdeaCommunityProperties but tailored for Android Studio.
+    alias("com.intellij.modules.androidstudio")
+    alias("com.intellij.modules.java-capable")
+    alias("com.intellij.modules.python-core-capable") // The Python plugin can be installed.
+    alias("com.intellij.modules.python-in-non-pycharm-ide-capable") // Enable Non-Pycharm-IDE support in the Python plugin.
+
+    include(CommunityProductFragments.javaIdeBaseFragment())
+    moduleSet(CommunityModuleSets.ideCommon())
+    moduleSet(CommunityModuleSets.debuggerStreams())
+    module("intellij.platform.coverage")
+    module("intellij.platform.coverage.agent")
+    module("intellij.platform.customization.min")
+
+    module("intellij.rml.dfa.impl") // For CIDR.
+  }
+
   private fun copyCidrLicense(spec: PluginLayout.PluginLayoutBuilder) {
     spec.withGeneratedResources { pluginDir, context ->
       val source = context.paths.communityHomeDir.resolve("CIDR_LICENSE.txt")
@@ -208,7 +238,7 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
     return clangdPlugin.directoryName
   }
 
-  override suspend fun copyAdditionalFiles(context: BuildContext, targetDir: Path) {
+  override suspend fun copyAdditionalFiles(targetDir: Path, context: BuildContext) {
     FileSet(context.paths.communityHomeDir)
       .include("LICENSE.txt")
       .include("NOTICE.txt")
@@ -222,19 +252,20 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
     FileSet(context.paths.communityHomeDir.resolve("../../tools/vendor/intellij/cidr/cidr-debugger/bin/helpers"))
       .includeAll()
       .copyToDir(targetDir.resolve("bin/helpers"))
-    return super.copyAdditionalFiles(context, targetDir)
+    return super.copyAdditionalFiles(targetDir, context)
   }
 
-  override fun createWindowsCustomizer(projectHome: String): WindowsDistributionCustomizer {
+  override fun createWindowsCustomizer(projectHome: Path): WindowsDistributionCustomizer? {
     return object : WindowsDistributionCustomizer() {
       init {
-        icoPath = "$projectHome/adt-branding/resources/artwork/androidstudio.ico"
-        icoPathForEAP = "$projectHome/adt-branding/resources/artwork/preview/androidstudio.ico"
+        icoPath = projectHome.resolve("adt-branding/resources/artwork/androidstudio.ico")
+        icoPathForEAP = projectHome.resolve("adt-branding/resources/artwork/preview/androidstudio.ico")
         buildZipArchiveWithBundledJre = false
         buildZipArchiveWithoutBundledJre = true
-        installerImagesPath = "$projectHome/build/conf/ideaCE/win/images"
-        fileAssociations = listOf(".java", ".groovy", ".kt")
+        installerImagesPath = projectHome.resolve("build/conf/ideaCE/win/images")
       }
+
+      override val fileAssociations: List<String> = listOf(".java", ".groovy", ".kt")
 
       override fun getFullNameIncludingEdition(appInfo: ApplicationInfoProperties): String = "Android Studio"
 
@@ -246,7 +277,7 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
         return "https://www.jetbrains.com/idea/uninstall/?edition=IC-${appInfo.majorVersion}.${appInfo.minorVersion}"
       }
 
-      override suspend fun copyAdditionalFiles(context: BuildContext, targetDir: Path, arch: JvmArchitecture) {
+      override suspend fun copyAdditionalFiles(targetDir: Path, arch: JvmArchitecture, context: BuildContext) {
         FileSet(context.paths.communityHomeDir.resolve("../../prebuilts/tools/clion/bin/clang/win/x64"))
           .includeAll()
           .copyToDir(targetDir.resolve("plugins/${clangdPluginDirName()}/bin/clang/win/x64/bin"))
@@ -260,13 +291,13 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
     return object : LinuxDistributionCustomizer() {
       init {
         buildArtifactWithoutRuntime = true
-        iconPngPath = "$projectHome/adt-branding/resources/artwork/icon_AS_128.png"
-        iconPngPathForEAP = "$projectHome/adt-branding/resources/artwork/preview/icon_AS_128.png"
+        iconPngPath = Path.of("$projectHome/adt-branding/resources/artwork/icon_AS_128.png")
+        iconPngPathForEAP = Path.of("$projectHome/adt-branding/resources/artwork/preview/icon_AS_128.png")
       }
 
       override fun getRootDirectoryName(appInfo: ApplicationInfoProperties, buildNumber: String): String = "android-studio"
 
-      override suspend fun copyAdditionalFiles(context: BuildContext, targetDir: Path, arch: JvmArchitecture) {
+      override suspend fun copyAdditionalFiles(targetDir: Path, arch: JvmArchitecture, context: BuildContext) {
         FileSet(context.paths.communityHomeDir.resolve("../../prebuilts/tools/clion/bin/clang/linux/x64"))
           .includeAll()
           .copyToDir(targetDir.resolve("plugins/${clangdPluginDirName()}/bin/clang/linux/x64/bin"))
@@ -274,29 +305,25 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
         GameTools(context, OsFamily.LINUX, arch).copyAdditionalFiles(targetDir.resolve("bin"))
       }
 
-      override fun generateExecutableFilesPatterns(
-        context: BuildContext,
-        includeRuntime: Boolean,
-        arch: JvmArchitecture,
-        targetLibcImpl: LibcImpl,
-      ): Sequence<String> =
-        super.generateExecutableFilesPatterns(context, includeRuntime, arch, targetLibcImpl)
+      override fun generateExecutableFilesPatterns(includeRuntime: Boolean, arch: JvmArchitecture, targetLibcImpl: LibcImpl, context: BuildContext): Sequence<String> {
+        return super.generateExecutableFilesPatterns(includeRuntime, arch, targetLibcImpl, context)
           .plus(KotlinBinaries.kotlinCompilerExecutables)
           .filterNot { it == "plugins/**/*.sh" }
+      }
     }
   }
 
-  inner class StudioMacDistributionCustomizer(projectHome: String) : MacDistributionCustomizer() {
+  inner class StudioMacDistributionCustomizer(projectHome: Path) : MacDistributionCustomizer() {
     init {
       urlSchemes = listOf("idea")
       associateIpr = true
       bundleIdentifier = "com.google.android.studio"
-      dmgImagePath = "$projectHome/build/conf/ideaCE/mac/images/dmg_background.tiff"
+      dmgImagePath = projectHome.resolve("build/conf/ideaCE/mac/images/dmg_background.tiff")
       // For now we have all 3 platform icons checked in and we change
       // the icons manually. Fix this when the other platforms have the
       // same mechanisms for our .ico and .svg files
-      icnsPath = "$projectHome/adt-branding/resources/artwork/AndroidStudio.icns"
-      icnsPathForEAP = "$projectHome/adt-branding/resources/artwork/preview/AndroidStudio.icns"
+      icnsPath = projectHome.resolve("adt-branding/resources/artwork/AndroidStudio.icns")
+      icnsPathForEAP = projectHome.resolve("adt-branding/resources/artwork/preview/AndroidStudio.icns")
     }
 
     override fun getRootDirectoryName(appInfo: ApplicationInfoProperties, buildNumber: String): String = "android-studio"
@@ -311,13 +338,14 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
         .copyToDir(targetDir.resolve("plugins/${clangdPluginDirName()}/bin/clang/mac/$archDir/bin"))
     }
 
-    override fun generateExecutableFilesPatterns(context: BuildContext, includeRuntime: Boolean, arch: JvmArchitecture): Sequence<String> =
-      super.generateExecutableFilesPatterns(context, includeRuntime, arch)
+    override fun generateExecutableFilesPatterns(includeRuntime: Boolean, arch: JvmArchitecture, context: BuildContext): Sequence<String> {
+      return super.generateExecutableFilesPatterns(includeRuntime, arch, context)
         .plus(KotlinBinaries.kotlinCompilerExecutables)
         .filterNot { it == "plugins/**/*.sh" }
+    }
   }
 
-  override fun createMacCustomizer(projectHome: String): MacDistributionCustomizer {
+  override fun createMacCustomizer(projectHome: Path): MacDistributionCustomizer? {
     return StudioMacDistributionCustomizer(projectHome)
   }
 
